# ToyMatchingEngine

./: .gitignore  CMakeLists.txt  README.md  TEST_CASES.md  ai_environment_export.jsonl  test_suite.py
src/api/: main.cpp
src/engine/: OrderBook.cpp  OrderBook.h
src/utils/: OSPlatform.h  SPSCQueue.h
